remove deprecated calls